--- a/Homework3-task2/Homework3-task2/Homework3-task2.vcxproj.filters
+++ b/Homework3-task2/Homework3-task2/Homework3-task2.vcxproj.filters
@@ -19,12 +19,12 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="quickSort.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы ресурсов</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="quickSort.h">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
