--- a/Homework4-task3/Homework4-task3/Homework4-task3.vcxproj.filters
+++ b/Homework4-task3/Homework4-task3/Homework4-task3.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Homework4-task3.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="terehovjokes.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="terehovjokes.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
