--- a/Homework4-task3/Homework4-task3/Homework4-task3.vcxproj
+++ b/Homework4-task3/Homework4-task3/Homework4-task3.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Homework4-task3.c" />
+    <ClCompile Include="terehovjokes.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="terehovjokes.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
