--- a/Test 3/Test 3/Test 3.vcxproj
+++ b/Test 3/Test 3/Test 3.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{2338f129-fc09-4b5e-b335-b0fd5971b6aa}</ProjectGuid>
-    <RootNamespace>Homework4task3</RootNamespace>
+    <ProjectGuid>{b620e9eb-5c3d-4f1f-904c-c2d7d3d539c9}</ProjectGuid>
+    <RootNamespace>Test3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,11 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Homework4-task3.c" />
-    <ClCompile Include="terehovJokes.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="terehovJokes.h" />
+    <ClCompile Include="Test 3.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
