--- a/Test1/Test1/Test1.vcxproj
+++ b/Test1/Test1/Test1.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{2338f129-fc09-4b5e-b335-b0fd5971b6aa}</ProjectGuid>
-    <RootNamespace>Homework4task3</RootNamespace>
+    <ProjectGuid>{1d809615-3331-4cba-a563-12862542b6a8}</ProjectGuid>
+    <RootNamespace>Test1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,11 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Homework4-task3.c" />
-    <ClCompile Include="terehovJokes.c" />
+    <ClCompile Include="quickSort.c" />
+    <ClCompile Include="Test1.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="terehovJokes.h" />
+    <ClInclude Include="quickSort.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
