--- a/Homework4-task3/Homework4-task3/Homework4-task3.vcxproj.filters
+++ b/Homework4-task3/Homework4-task3/Homework4-task3.vcxproj.filters
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Исходные файлы">
+    <Filter Include="РСЃС…РѕРґРЅС‹Рµ С„Р°Р№Р»С‹">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Файлы заголовков">
+    <Filter Include="Р¤Р°Р№Р»С‹ Р·Р°РіРѕР»РѕРІРєРѕРІ">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="Файлы ресурсов">
+    <Filter Include="Р¤Р°Р№Р»С‹ СЂРµСЃСѓСЂСЃРѕРІ">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Homework4-task3.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>РСЃС…РѕРґРЅС‹Рµ С„Р°Р№Р»С‹</Filter>
     </ClCompile>
     <ClCompile Include="terehovJokes.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>РСЃС…РѕРґРЅС‹Рµ С„Р°Р№Р»С‹</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="terehovJokes.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Р¤Р°Р№Р»С‹ Р·Р°РіРѕР»РѕРІРєРѕРІ</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
