--- a/Homework3 - task3/task3.3/task3.3.vcxproj
+++ b/Homework3 - task3/task3.3/task3.3.vcxproj
@@ -145,6 +145,10 @@
   <ItemGroup>
     <ClInclude Include="quickSort.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="array.txt" />
+    <Text Include="test.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
