--- a/Homework3 - task3/task3.3/task3.3.vcxproj.filters
+++ b/Homework3 - task3/task3.3/task3.3.vcxproj.filters
@@ -19,12 +19,20 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="quickSort.c">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы ресурсов</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="quickSort.h">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Файлы заголовков</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="array.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="test.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
   </ItemGroup>
 </Project>
