--- a/Homework5 - task1/Homework5 - task1/Homework5 - task1.vcxproj
+++ b/Homework5 - task1/Homework5 - task1/Homework5 - task1.vcxproj
@@ -143,12 +143,14 @@
     <ClCompile Include="..\..\Stack\Stack\testForStack.c" />
     <ClCompile Include="dynamicStringReader.c" />
     <ClCompile Include="Homework5 - task1.c" />
+    <ClCompile Include="testForTask.c" />
     <ClCompile Include="transformToResult.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Stack\Stack\Stack.h" />
     <ClInclude Include="..\..\Stack\Stack\testForStack.h" />
     <ClInclude Include="dynamicStringReader.h" />
+    <ClInclude Include="testForTask.h" />
     <ClInclude Include="transformToResult.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
