--- a/Homework5 - task1/Homework5 - task1/Homework5 - task1.vcxproj.filters
+++ b/Homework5 - task1/Homework5 - task1/Homework5 - task1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="transformToResult.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="testForTask.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dynamicStringReader.h">
@@ -42,6 +45,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="transformToResult.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="testForTask.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
