--- a/Homework5 - task3/Homework5 - task3/Homework5 - task3.vcxproj
+++ b/Homework5 - task3/Homework5 - task3/Homework5 - task3.vcxproj
@@ -139,7 +139,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\Stack\Stack\Stack.c" />
+    <ClCompile Include="..\..\Stack\Stack\testForStack.c" />
+    <ClCompile Include="dynamicStringReader.c" />
     <ClCompile Include="Homework5 - task3.c" />
+    <ClCompile Include="transformToPostfixForm.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Stack\Stack\Stack.h" />
+    <ClInclude Include="..\..\Stack\Stack\testForStack.h" />
+    <ClInclude Include="dynamicStringReader.h" />
+    <ClInclude Include="transformToPostfixForm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
