--- a/Homework6 - task1/Homework6 - task1/Homework6 - task1.vcxproj
+++ b/Homework6 - task1/Homework6 - task1/Homework6 - task1.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Homework6 - task1.c" />
+    <ClCompile Include="sortList.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="sortList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
