--- a/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj.filters
+++ b/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="ListSort.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="fillingList.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="List.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="ListSort.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="fillingList.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
