commit before pullreq

--- a/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj
+++ b/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj
@@ -143,11 +143,13 @@
     <ClCompile Include="Homework6 - task3.c" />
     <ClCompile Include="List.c" />
     <ClCompile Include="ListSort.c" />
+    <ClCompile Include="Tests.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="fillingList.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="ListSort.h" />
+    <ClInclude Include="Tests.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
