--- a/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj.filters
+++ b/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="fillingList.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Tests.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="List.h">
@@ -36,6 +39,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="fillingList.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Tests.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
