--- a/Homework9 - task1/Homework9 - task1/Homework9 - task1.vcxproj
+++ b/Homework9 - task1/Homework9 - task1/Homework9 - task1.vcxproj
@@ -139,7 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Homework9 - task1.cpp" />
+    <ClCompile Include="..\..\List\List\List.c" />
+    <ClCompile Include="hashTable.c" />
+    <ClCompile Include="main.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\List\List\List.h" />
+    <ClInclude Include="hashTable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
