--- a/Homework7 - task1/Homework7 - task1/Homework7 - task1.vcxproj
+++ b/Homework7 - task1/Homework7 - task1/Homework7 - task1.vcxproj
@@ -140,9 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Homework7 - task1.c" />
+    <ClCompile Include="testForTask.c" />
     <ClCompile Include="Tree.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="testForTask.h" />
     <ClInclude Include="Tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
