--- a/Homework7 - task1/Homework7 - task1/Homework7 - task1.vcxproj.filters
+++ b/Homework7 - task1/Homework7 - task1/Homework7 - task1.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Tree.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="testForTask.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tree.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="testForTask.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
