--- a/Homework12 - task2/Homework12 - task2/Homework12 - task2.vcxproj
+++ b/Homework12 - task2/Homework12 - task2/Homework12 - task2.vcxproj
@@ -85,7 +85,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
@@ -142,10 +142,15 @@
     <ClCompile Include="comments.c" />
     <ClCompile Include="List.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="readFromFile.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="comments.h" />
     <ClInclude Include="List.h" />
+    <ClInclude Include="readFromFile.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="task.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
