--- a/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj
+++ b/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj
@@ -151,6 +151,10 @@
     <ClInclude Include="ListSort.h" />
     <ClInclude Include="Tests.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt" />
+    <Text Include="test.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
