--- a/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj.filters
+++ b/Homework6 - task3/Homework6 - task3/Homework6 - task3.vcxproj.filters
@@ -45,4 +45,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="data.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="test.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
