--- a/Homework7 - task2/Homework7 - task2/Homework7 - task2.vcxproj.filters
+++ b/Homework7 - task2/Homework7 - task2/Homework7 - task2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="readFromFile.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="tests.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tree.h">
@@ -32,9 +35,15 @@
     <ClInclude Include="readFromFile.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="tests.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="task.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="test.txt">
       <Filter>Файлы ресурсов</Filter>
     </Text>
   </ItemGroup>
